# hwat

./: .gitignore  =3.10  README.md  _user.py  analysis.ipynb  analysis.py  c_dist.yaml  cluster_util.py  cluster_utils.py  compile.ipynb  conjugate_gradient_optimizer.py  dashboard.py  debug.ipynb  debug_ke.ipynb  debug_ke.py  docs.md  ds_c.json  ferminet_torch.py  flow.md  hwat.py  hwat_b.py  hwat_func.py  opt_hypam_utils.py  periodic.py  proj_secrets.py  pydef.py  pyfig copy.py  pyfig.py  pyfig_util.py  pyfig_utils.py  pyproject.toml  qvik-test.ipynb  qvik.ipynb  run copy.ipynb  run.ipynb  run.py  run_b.py  run_cg.py  run_deepspeed.py  run_intro.ipynb  (+9 more)
cfg/: project_cfg.py  slurm.py
content/: docs.md  map.mm.md  requirements.txt  talk_mm.html  workflow.md  workflow.mmd
dump/: README.md  analysis.ipynb  complete_docs.md  hypam_opt.db  opt.py  pyfig_lumi.py  pyfig_v0.py  qvik-test.ipynb  simple.py  systems.py  user.py
hwat/: analysis.py  utils.py
hwat_now/: analysis.ipynb  analysis.py  metric.py  model.py  periodic.py  test.ipynb
jax_version/: _user.py  hwat.py  pyfig.py  run.ipynb  run.py  utils.py
qmc/: mf.hdf5
things/: aesthetic.py  base.py  core.py  core_utils.py  dist_repo.py  distribute_utils.py  gen_repo.py  logger_repo.py  opt_hypam_utils.py  pyfig_def.py  pyfig_utils.py  resource_repo.py  resource_utils.py  run_cg.py  sweep_repo.py  torch_utils.py  type.py  typfig.py  utils.py
utils/: __init__.py  distribute_utils.py  opt_hypam_utils.py  pyfig_utils.py  resource_utils.py  run_cg.py  torch_utils.py  utils.py
walle/: distribute_utils.py  run_cg.py  (+5 more)
(+45 files in other folders)
