[tool.poetry]
name = "hwat"
version = "0.1.0"
description = ""
authors = ["amawi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
wandb = "^0.14.2"
simple-slurm = "^0.2.6"
paramiko = "^3.1.0"
notebook = "^6.5.4"
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"
optree = "^0.9.0"
torch-tb-profiler = "^0.4.1"
prettytable = "^3.7.0"
accelerate = "^0.18.0"
optuna = "^3.1.1"
pyscf = "^2.2.1"
torch-optimizer = "^0.3.0"
dash = "^2.9.3"
dash-bootstrap-components = "^1.4.1"
pydantic = "^1.10.7"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
